# rust-raytracer

./: Cargo.toml  Readme.md
assets/: Cornell_Box.json  Cornell_Box_With_Sphere.json  Example_Spec.json  Globe.json  Materials.json
src/: aggregate.rs  base.rs  camera.rs  color.rs  main.rs  material.rs  matrix.rs  pdf.rs  point.rs  progress.rs  ray.rs  resources.rs  scene.rs  shape.rs  texture.rs  transform.rs  utils.rs  vector.rs  volume.rs
